--- a/example.env
+++ b/example.env
@@ -1,3 +1,3 @@
-DB="postgres://gofit:gofit@localhost:5432/gofit"
+DB="postgres://goauth:goauth@localhost:5432/goauth"
 PORT=3000
 JWT_SECRET=yoursecret
