--- a/example.env
+++ b/example.env
@@ -1,3 +1,4 @@
-DB="postgres://goauth:goauth@localhost:5432/goauth"
-PORT=3000
-JWT_SECRET=yoursecret
+DATABASE_URL="postgres://godiscauth:godiscauth@localhost:5432/godiscauth"
+AUTH_SERVER_PORT=3001
+DISCUSSION_APP_SESSION_KEY=yoursufficientlycomplexsecretthatmustmeetminimumentropyBits
+CORS_ALLOWED_ORIGINS="http://localhost:5173,http://localhost:4173"
